--- a/editor/package.json
+++ b/editor/package.json
@@ -10,6 +10,7 @@
     "@braintripping/keypress.js": "github:braintripping/Keypress#62e5408",
     "@material-ui/core": "3.9.3",
     "codemirror": "5.46.0",
+    "complex.js": "^2.0.11",
     "core-js": "3.0.1",
     "firebase": "^7.4.0",
     "firebase-tools": "7.7.0",
