--- a/editor/package.json
+++ b/editor/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "3.9.3",
     "codemirror": "5.46.0",
     "complex.js": "^2.0.11",
+    "fraction.js": "^4.0.12",
     "core-js": "3.0.1",
     "firebase": "^7.4.0",
     "firebase-tools": "7.7.0",
