--- a/editor/package.json
+++ b/editor/package.json
@@ -11,6 +11,7 @@
     "codemirror": "5.46.0",
     "complex.js": "^2.0.11",
     "fraction.js": "^4.0.12",
+    "odex": "^2.0.4",
     "core-js": "3.0.1",
     "firebase": "^7.4.0",
     "firebase-tools": "7.7.0",
